--- a/src/app/chartcontainer/chartthree/chartthree.component.html
+++ b/src/app/chartcontainer/chartthree/chartthree.component.html
@@ -1,3 +1,19 @@
-<p>
-  chartthree works!
-</p>
+<div style="display: block">
+  <mat-toolbar color="primary">
+    <div class="center">
+      <span>
+      <h2>
+        Reviews Data
+      </h2>
+    </span>
+    </div>
+  </mat-toolbar>
+  <br>
+  <canvas baseChart
+          [data]="polarAreaChartData"
+          [labels]="polarAreaChartLabels"
+          [legend]="polarAreaLegend"
+          [chartType]="polarAreaChartType"
+          (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)"></canvas>
+</div>
