css grids to arrange charts next to each other

--- a/src/app/chartcontainer/chartcontainer.component.html
+++ b/src/app/chartcontainer/chartcontainer.component.html
@@ -1,5 +1,20 @@
-<app-chartone></app-chartone>
+<div class="wrapper">
+  <div class="one">
+    <app-chartone></app-chartone>
+  </div>
+  <div class="two">
+    <app-charttwo></app-charttwo>
+  </div>
+  <div class="three">
+    <app-chartthree></app-chartthree>
+  </div>
+</div>
 
-<app-charttwo></app-charttwo>
 
-<app-chartthree></app-chartthree>
+
+
+
+
+
+
+
