--- a/src/app/chartcontainer/chartthree/chartthree.component.html
+++ b/src/app/chartcontainer/chartthree/chartthree.component.html
@@ -3,7 +3,7 @@
     <div class="center">
       <span>
       <h2>
-        Reviews Data
+        Review Differences
       </h2>
     </span>
     </div>
