--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <mat-grid-list cols="3" rowHeight="4:1">
   <mat-grid-tile>
-    <button mat-raised-button color="primary">VISUALIZE DATA</button>
+    <button mat-raised-button color="primary" (click)="changeShowStatus()">VISUALIZE DATA</button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button mat-raised-button color="primary">PRICE ESTIMATION</button>
+    <button mat-raised-button color="primary" (click)="changeShowStatusForPrice()">PRICE ESTIMATION</button>
   </mat-grid-tile>
   <mat-grid-tile>
     <button mat-raised-button color="primary">BOOKINGS OPTIMIZATION</button>
@@ -11,4 +11,4 @@
 </mat-grid-list>
 
 
-<app-chartcontainer></app-chartcontainer>
+<app-chartcontainer *ngIf="showHide"></app-chartcontainer>
