--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -1,3 +1,18 @@
-<p>
-  bookings works!
-</p>
+<mat-grid-list cols="2" rowHeight="3:1">
+  <mat-grid-tile>
+    <form class="form">
+      <mat-form-field class="full-width">
+        <input matInput type="float" placeholder="Lattitude = 37." value="" #latInput>
+
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <input matInput type="float" placeholder="Longitude = -122." value="" #longInput>
+      </mat-form-field>
+      <br>
+      <button mat-raised-button color="primary" type="button" (click)="recieveGeoLocation(latInput.value, longInput.value)">ESTIMATE</button>
+    </form>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <h2>{{value}}</h2>
+  </mat-grid-tile>
+</mat-grid-list>
